--- a/index.html
+++ b/index.html
@@ -1,32 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <!--
-    If you are serving your web app in a path other than the root, change the
-    href value below to reflect the base path you are serving from.
+    <!--
+      If you are serving your web app in a path other than the root, change the
+      href value below to reflect the base path you are serving from.
 
-    The path provided below has to start and end with a slash "/" in order for
-    it to work correctly.
+      The path provided below has to start and end with a slash "/" in order for
+      it to work correctly.
 
-    For more details:
-    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
-  -->
-  <base href="/">
+      For more details:
+      * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
+    -->
+    <base href="/">
 
-  <meta charset="UTF-8">
-  <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+    <meta charset="UTF-8">
+    <meta content="IE=Edge" http-equiv="X-UA-Compatible">
+    <meta name="description" content="A new Flutter project.">
 
-  <!-- iOS meta tags & icons -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="bleck_pass">
-<!--  <meta name="google-signin-client_id" content="1057856335907-1kv52miqdd95rt1ggiplim245mnni999.apps.googleusercontent.com">-->
-  <meta name="google-signin-client_id" content="1057856335907-646fcfji9ahjqu7iunq17liiq9qd96g6.apps.googleusercontent.com">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+    <!-- iOS meta tags & icons -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="bleck_pass">
+    <!--  <meta name="google-signin-client_id" content="1057856335907-1kv52miqdd95rt1ggiplim245mnni999.apps.googleusercontent.com">-->
+    <!--  <meta name="google-signin-client_id" content="1057856335907-646fcfji9ahjqu7iunq17liiq9qd96g6.apps.googleusercontent.com">-->
+    <meta name="google-signin-client_id"
+          content="1057856335907-ulgiqip8bmp0ur6h19vmu74al157hjkr.apps.googleusercontent.com">
+    <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>bleck_pass</title>
-  <link rel="manifest" href="manifest.json">
+    <title>bleck_pass</title>
+    <link rel="manifest" href="manifest.json">
 </head>
 <body>
 
@@ -55,13 +57,14 @@
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
   firebase.analytics();
+
 </script>
 
-  <!-- This script installs service_worker.js to provide PWA functionality to
-       application. For more information, see:
-       https://developers.google.com/web/fundamentals/primers/service-workers -->
-  <script>
-    var serviceWorkerVersion = '2063337703';
+<!-- This script installs service_worker.js to provide PWA functionality to
+     application. For more information, see:
+     https://developers.google.com/web/fundamentals/primers/service-workers -->
+<script>
+    var serviceWorkerVersion = '2285845056';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
@@ -123,6 +126,7 @@
       // Service workers not supported. Just drop the <script> tag.
       loadMainDartJs();
     }
-  </script>
+
+</script>
 </body>
 </html>
